replace `collect(Collectors.toList()` with `Stream::toList`